fixed a text alignment issue with responsive donate links

--- a/mobile.scss
+++ b/mobile.scss
@@ -20,6 +20,10 @@
   .donate{
     display: none;
   }
+
+  .hidden-donate{
+    text-align: center;
+  }
   ul.nav li{
     display: block;
     padding:0;
